src/Domain/Compiler/Tests/Expression/BinaryExpression/NonSupportedTypes/__Baselines__/BinaryExpression_NonSupportedTypes_Right-StashIr.error
error: Type 's32' and 'bool' are not binary operable.
--> main.hs:7:16
  | 
7 |         return 1 + true;}}
  |                ^^^^^^^^
